INTRASHARE FINAL COMMIT

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,8 @@
 PORT = 3005
+DATABASE_NAME="intrashare"
+HOST = localhost
+USER = root
+PASSWORD = 12345
+DATABASE = "employee"
+TABLENAME = "employees"
 DATABASE_URL="mysql://root:12345@localhost:3306/intrashare?schema=public"
