--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "emoji-picker-react": "^4.4.9",
     "lottie-react": "^2.4.0",
     "next": "^13.5.6",
