--- a/server/package.json
+++ b/server/package.json
@@ -5,16 +5,19 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "faker": "^5.5.3",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.9.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "prisma": "^4.16.2",
-    "socket.io": "^4.6.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6"
   }
 }
