--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,4 @@ PASSWORD = 12345
 DATABASE = "employee"
 TABLENAME = "employees"
 DATABASE_URL="mysql://root:12345@localhost:3306/intrashare?schema=public"
+SECRETKEY="bsvilhcblilhsabvizsbdvlkhzbdfvklazbxvchb"
