--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "faker": "^5.5.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
